# OOP

./: .coverage  README.md  pyproject.toml
src/: BaseProduct.py  Category.py  MixinClasses.py  Product.py  lawnGrass.py  main.py  read_json.py  smartphone.py
tests/: .coverage  test_BaseProduct.py  test_Category.py  test_Category_end_Product.py  test_MixinClasses.py  test_Product.py  test_lawnGrass.py  test_smartphone.py
